# sync-service

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pgdata/: postgresql.conf
pgdata/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
pgdata/base/4/: 2619
pgdata/base/5/: 1247  1249  1259  16384  16385  16390  16391  16393  2224  2579  2604  2606  2608  2610  2619  2619_fsm  2619_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2704  3455  5002  pg_internal.init
pgdata/global/: 1260  2676  pg_control  pg_internal.init
pgdata/pg_stat/: pgstat.stat
scripts/: entrypoint.sh
src/: config.py  main.py  worker.py
src/api/: __init__.py
src/api/contacts/: api.py
src/db/populate/: Contacts.csv
src/interfaces/contacts/: __init__.py  contacts_interface.py
src/models/: contacts.py
src/repositories/contacts/: __init__.py  base.py  contacts_repository.py
src/tasks/: cron_tasks.py
tests/: test_contacts_api.py  test_contacts_interface.py
